--- a/ts-react/package.json
+++ b/ts-react/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.10.3",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^18.2.0",
